180416 Recommendation based on cosine similarity

--- a/seeding_mysql.ipynb
+++ b/seeding_mysql.ipynb
@@ -8,6 +8,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "MySQL Workbench\n",
+    "\n",
+    "If you want to avoid writing sql, you can also do it in MySQL Workbench by right clicking on the table, choose \"Alter Table ...\" in the menu.\n",
+    "\n",
+    "When the table structure view opens, go to tab \"Options\" (on the lower bottom of the view), and set \"Auto Increment\" field to the value of the next autoincrement number.\n",
+    "\n",
+    "Don't forget to hit \"Apply\" when you are done with all changes."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -46,7 +59,7 @@
     "db = db.connect(\n",
     "    '127.0.0.1',\n",
     "    'root',\n",
-    "    pw,\n",
+    "    '5555',\n",
     "    'news_rec',\n",
     "    charset='utf8'\n",
     ")"
