--- a/cosine_sim_recommend.ipynb
+++ b/cosine_sim_recommend.ipynb
@@ -2,6 +2,439 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import MySQLdb as db\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from scipy.spatial.distance import cosine\n",
+    "\n",
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "from scipy import sparse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db = db.connect(\n",
+    "    \"127.0.0.1\",\n",
+    "    \"root\",\n",
+    "    '5555',\n",
+    "    \"news_rec\",\n",
+    "    charset='utf8',\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sql = 'SELECT * FROM VIEW'\n",
+    "view = pd.read_sql(sql, db)\n",
+    "view['count'] = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pivot2 = view.pivot(index='user_id',columns='article_id',values='count').fillna(0)\n",
+    "pivot = pivot2.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def recommend_articles(pivot, user_id, how_many_to_consider=5, how_many_to_rec=5):\n",
+    "    raw = pivot.values\n",
+    "    spr = sparse.csr_matrix(raw)\n",
+    "    # 코사인 유사도 행렬\n",
+    "    sim = cosine_similarity(spr)\n",
+    "\n",
+    "    similar_user_index = sim[user_id -\n",
+    "                             1].argsort()[-how_many_to_consider:][::-1][1:]\n",
+    "    similar_users_item = raw[similar_user_index]\n",
+    "    # 비슷한 유저들이 어떤 기사를 봤는지 평균을 냄\n",
+    "    item_vector = np.sum(similar_users_item, axis=0) / how_many_to_consider\n",
+    "    pivot.loc['item'] = item_vector\n",
+    "\n",
+    "    user_row = pivot.loc[user_id]\n",
+    "    # 유저가 본 기사는 추천에서 제외\n",
+    "    user_seen = user_row[user_row != 0].index\n",
+    "\n",
+    "    rec = pivot.loc['item']\n",
+    "    # 비슷한 유저들이 본 기사들\n",
+    "    rec_index = rec[rec != 0].index\n",
+    "\n",
+    "    # 안 본 기사의 리스트를 구한 뒤\n",
+    "    not_seen_articles = set(rec_index) - set(user_seen)\n",
+    "    rec_target = rec[not_seen_articles]\n",
+    "\n",
+    "    # 유사도가 비슷한 유저들이 봤던 기사 중 제일 값이 높은 애들을 추천\n",
+    "    return rec_target.sort_values(ascending=False)[:how_many_to_rec]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "article_id\n",
+       "5029    0.6\n",
+       "3189    0.6\n",
+       "3348    0.4\n",
+       "447     0.4\n",
+       "655     0.4\n",
+       "Name: item, dtype: float64"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recommend_articles(pivot2.copy(),150)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = pivot.values\n",
+    "spr = sparse.csr_matrix(a)\n",
+    "sim = cosine_similarity(spr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "similar_user_index = sim[0].argsort()[-5:][::-1][1:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "similar_user = a[similar_user_index]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5255"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "item_vector = np.sum(similar_user, axis=0) / 5\n",
+    "len(item_vector)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pivot.loc['item'] = item_vector"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>article_id</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>8</th>\n",
+       "      <th>10</th>\n",
+       "      <th>11</th>\n",
+       "      <th>12</th>\n",
+       "      <th>...</th>\n",
+       "      <th>5603</th>\n",
+       "      <th>5604</th>\n",
+       "      <th>5605</th>\n",
+       "      <th>5606</th>\n",
+       "      <th>5607</th>\n",
+       "      <th>5608</th>\n",
+       "      <th>5609</th>\n",
+       "      <th>5610</th>\n",
+       "      <th>5611</th>\n",
+       "      <th>5612</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>user_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>item</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2 rows × 5255 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "article_id  1     2     3     4     5     6     8     10    11    12    ...   \\\n",
+       "user_id                                                                 ...    \n",
+       "1            0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0  ...    \n",
+       "item         0.0   0.0   0.0   0.0   0.0   0.0   0.2   0.0   0.0   0.0  ...    \n",
+       "\n",
+       "article_id  5603  5604  5605  5606  5607  5608  5609  5610  5611  5612  \n",
+       "user_id                                                                 \n",
+       "1            0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0  \n",
+       "item         0.0   0.0   0.0   0.0   0.2   0.0   0.0   0.0   0.0   0.0  \n",
+       "\n",
+       "[2 rows x 5255 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pivot.loc[[1,'item']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmp = pivot.loc[1]\n",
+    "user_seen = tmp[tmp!=0].index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(user_seen)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rec = pivot.loc['item']\n",
+    "rec_index = rec[rec!=0].index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "301"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(rec_index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "not_seen_list = set(rec_index) - set(user_seen)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rec_target = rec[not_seen_list]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "article_id\n",
+       "1585    0.4\n",
+       "3687    0.4\n",
+       "2813    0.4\n",
+       "760     0.4\n",
+       "4600    0.4\n",
+       "Name: item, dtype: float64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# ID 1인 유저를 위한 추천 리스트\n",
+    "rec_target.sort_values(ascending=False)[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -24,7 +457,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
