--- a/tfidf_multiNB.ipynb
+++ b/tfidf_multiNB.ipynb
@@ -27,16 +27,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(data.content, data.area, test_size=0.25, random_state=1)"
+    "X_train, X_test, y_train, y_test = train_test_split(data.content, data.area, test_size=0.3, random_state=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,21 +59,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1833    1\n",
-       "3601    3\n",
-       "5594    5\n",
-       "1010    1\n",
-       "1488    1\n",
+       "3897    4\n",
+       "3185    3\n",
+       "4211    4\n",
+       "5048    5\n",
+       "946     1\n",
        "Name: area, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,41 +102,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_pred = model.predict(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[217,   1,   8,   5,   1,   1],\n",
-       "       [  3, 212,   3,   1,   8,   3],\n",
-       "       [  7,   5, 212,   1,  10,   0],\n",
-       "       [  5,   6,   0, 223,   6,   1],\n",
-       "       [  0,   4,   2,   0, 239,   0],\n",
-       "       [  3,   7,   0,   1,   7, 201]], dtype=int64)"
+       "array([[257,   1,   8,   5,   1,   1],\n",
+       "       [  5, 251,   4,   1,   8,   8],\n",
+       "       [ 10,   5, 255,   1,  11,   0],\n",
+       "       [  5,   3,   0, 276,   6,   2],\n",
+       "       [  3,   4,   3,   0, 276,   4],\n",
+       "       [  3,   7,   0,   1,   9, 250]], dtype=int64)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "y_pred = model.predict(X_test)\n",
     "confusion_matrix(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -145,20 +137,45 @@
      "text": [
       "             precision    recall  f1-score   support\n",
       "\n",
-      "          0       0.92      0.93      0.93       233\n",
-      "          1       0.90      0.92      0.91       230\n",
-      "          2       0.94      0.90      0.92       235\n",
-      "          3       0.97      0.93      0.94       241\n",
-      "          4       0.88      0.98      0.93       245\n",
-      "          5       0.98      0.92      0.95       219\n",
+      "          0       0.91      0.94      0.92       273\n",
+      "          1       0.93      0.91      0.92       277\n",
+      "          2       0.94      0.90      0.92       282\n",
+      "          3       0.97      0.95      0.96       292\n",
+      "          4       0.89      0.95      0.92       290\n",
+      "          5       0.94      0.93      0.93       270\n",
       "\n",
-      "avg / total       0.93      0.93      0.93      1403\n",
+      "avg / total       0.93      0.93      0.93      1684\n",
       "\n"
      ]
     }
    ],
    "source": [
     "print(classification_report(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-----------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle.dump(model, open(\"dataset/twitter-tfidf-mulnb.pk\", \"wb\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = pd.read_pickle('dataset/twitter-tfidf-mulnb.pkl')"
    ]
   },
   {
@@ -185,7 +202,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
