180420 Final Pipelining completed

--- a/1_naver_news_crawling.ipynb
+++ b/1_naver_news_crawling.ipynb
@@ -13,7 +13,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import datetime\n",
+    "\n",
+    "now = datetime.now()\n",
+    "cur_time = now.strftime('%Y-%m-%d %H-%M-%S')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +49,7 @@
     "        file_name = '{}/{}-{}.txt'.format(area, count,\n",
     "                                          posted_time.text.replace(':', '-'))\n",
     "        \n",
-    "        dest_path = '{}/{}'.format('crawling',file_name)\n",
+    "        dest_path = '{}/{}/{}'.format('crawling',cur_time, file_name)\n",
     "        with open(dest_path, 'w', encoding='UTF-8') as f:\n",
     "            title = '\\t'+title_list[idx] + '\\n\\n'\n",
     "            f.write(title + content)\n",
@@ -47,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,6 +104,26 @@
     "\n",
     "        page_counts -= 1\n",
     "        print('\\t','remaining page = ' + str(page_counts))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from os import makedirs as mk\n",
+    "from os import path as pt\n",
+    "\n",
+    "path = ['정치','경제','사회','세계','생활문화','IT과학']\n",
+    "\n",
+    "folder_name = cur_time\n",
+    "new_path = '{}/{}'.format('crawling',folder_name)\n",
+    "\n",
+    "if not pt.exists(new_path):\n",
+    "    mk(new_path)\n",
+    "    for area in path:\n",
+    "        mk('{}/{}'.format(new_path,area))"
    ]
   },
   {
