--- a/2_preprocessing_articles.ipynb
+++ b/2_preprocessing_articles.ipynb
@@ -2,17 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import re\n",
+    "import pandas as pd\n",
+    "import pickle\n",
+    "\n",
+    "from os import listdir\n",
+    "from os.path import isfile, join"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "folder_name = '2018-04-20 02-38-11'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "def trimming(file_name):\n",
     "    # 1. 역순으로 제일 먼저 찾은 이메일 밑으로 다 없앰\n",
     "    # 2. 나머지 특수문자들 다 없앰 (. 빼고)\n",
     "    # 3. 공백문자열 다 없앰\n",
-    "    \n",
+    "    import re\n",
     "    with open(file_name,'r',encoding='utf8') as f:\n",
     "        articles = f.readlines()\n",
     "    \n",
@@ -40,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +117,7 @@
     "\n",
     "path = ['정치','경제','사회','세계','생활문화','IT과학']\n",
     "\n",
-    "new_path = '{}/{}'.format('preprocess',cur_time)\n",
+    "new_path = '{}/{}'.format('preprocess',folder_name)\n",
     "\n",
     "if not pt.exists(new_path):\n",
     "    mk(new_path)\n",
@@ -106,24 +127,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "crawling/정치\n",
       "정치  completed !\n",
-      "crawling/경제\n",
       "경제  completed !\n",
-      "crawling/사회\n",
       "사회  completed !\n",
-      "crawling/세계\n",
       "세계  completed !\n",
-      "crawling/생활문화\n",
       "생활문화  completed !\n",
-      "crawling/IT과학\n",
       "IT과학  completed !\n"
      ]
     }
@@ -133,8 +148,7 @@
     "from os.path import isfile, join\n",
     "\n",
     "for each in path:\n",
-    "    crawling_path = '{}/{}'.format('crawling', each)\n",
-    "    print(crawling_path)\n",
+    "    crawling_path = '{}/{}/{}'.format('crawling',folder_name,each)\n",
     "    file_names = [f for f in listdir(crawling_path) if isfile(\n",
     "        join(crawling_path, f)) and f.endswith(\".txt\")]\n",
     "    # 파일이름\n",
@@ -142,14 +156,13 @@
     "    full_names = ['{}/{}'.format(each, tmp) for tmp in file_names]\n",
     "    # 영역/파일이름\n",
     "\n",
-    "    crawling_path = ['{}/{}'.format('crawling',tmp) for tmp in full_names]\n",
+    "    crawling_path = ['{}/{}/{}'.format('crawling',folder_name, tmp) for tmp in full_names]\n",
     "    # crawling/영역/파일이름\n",
-    "    \n",
     "    for idx, file_name in enumerate(crawling_path):\n",
     "        trimmed = trimming(file_name)\n",
     "        trimmed = ''.join(trimmed)\n",
     "        \n",
-    "        dest_path = '{}/{}/{}'.format('preprocess',cur_time,full_names[idx])\n",
+    "        dest_path = '{}/{}/{}'.format('preprocess',folder_name,full_names[idx])\n",
     "\n",
     "        with open(dest_path, 'w', encoding='utf-8') as f:\n",
     "            f.write(trimmed)\n",
@@ -159,20 +172,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pickle\n",
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "scrolled": true
-   },
    "outputs": [
     {
      "name": "stdout",
@@ -193,8 +194,13 @@
     "\n",
     "total_df = pd.DataFrame(columns=['content','area'])\n",
     "\n",
+    "def date_trimmer(raw_date):\n",
+    "    tmp = raw_date.split('/')[-1].replace('.txt',':00')\n",
+    "    tmp = tmp.split()\n",
+    "    return '-'.join(tmp[0].split('-')[1:]) + ' ' + tmp[1].replace('-',':')\n",
+    "\n",
     "for each in path:\n",
-    "    preprocess_path = '{}/{}/{}'.format('preprocess',cur_time, each[0])\n",
+    "    preprocess_path = '{}/{}/{}'.format('preprocess',folder_name,each[0])\n",
     "    file_names = [f for f in listdir(preprocess_path) if isfile(\n",
     "        join(preprocess_path, f)) and f.endswith(\".txt\")]\n",
     "    full_names = ['{}/{}'.format(preprocess_path, tmp) for tmp in file_names]\n",
@@ -213,8 +219,7 @@
     "    df['content'] = pd.Series(contents)\n",
     "    df['area'] = each[1]\n",
     "    df['written_date'] = pd.Series(written_date)\n",
-    "    df['written_date'] = df['written_date'].apply(lambda x: '-'.join(x.split('/')[1].replace('.txt','').split('-')[1:]))\n",
-    "    df['written_date'] = df['written_date'].apply(lambda x: '-'.join(x.split()))\n",
+    "    df['written_date'] = df['written_date'].apply(date_trimmer)\n",
     "    df['title'] = df['content'].apply(lambda x: x.split('\\n')[0].replace('\\t',''))\n",
     "    \n",
     "    df = df[['title','content','written_date','area']]\n",
@@ -228,13 +233,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "with open('dataset/training_{}.pkl'.format(cur_time),'wb') as f:\n",
-    "    pickle.dump(total_df, f)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
