--- a/3_dataset_organizer.ipynb
+++ b/3_dataset_organizer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "folder_name = '2018-04-19 19-23-11'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
    "metadata": {
     "scrolled": true
    },
@@ -39,8 +48,13 @@
     "\n",
     "total_df = pd.DataFrame(columns=['content','area'])\n",
     "\n",
+    "def date_trimmer(raw_date):\n",
+    "    tmp = raw_date.split('/')[-1].replace('.txt',':00')\n",
+    "    tmp = tmp.split()\n",
+    "    return '-'.join(tmp[0].split('-')[1:]) + ' ' + tmp[1].replace('-',':')\n",
+    "\n",
     "for each in path:\n",
-    "    preprocess_path = '{}/{}'.format('preprocess',each[0])\n",
+    "    preprocess_path = '{}/{}/{}'.format('preprocess',folder_name,each[0])\n",
     "    file_names = [f for f in listdir(preprocess_path) if isfile(\n",
     "        join(preprocess_path, f)) and f.endswith(\".txt\")]\n",
     "    full_names = ['{}/{}'.format(preprocess_path, tmp) for tmp in file_names]\n",
@@ -59,8 +73,7 @@
     "    df['content'] = pd.Series(contents)\n",
     "    df['area'] = each[1]\n",
     "    df['written_date'] = pd.Series(written_date)\n",
-    "    df['written_date'] = df['written_date'].apply(lambda x: '-'.join(x.split('/')[1].replace('.txt','').split('-')[1:]))\n",
-    "    df['written_date'] = df['written_date'].apply(lambda x: '-'.join(x.split()))\n",
+    "    df['written_date'] = df['written_date'].apply(date_trimmer)\n",
     "    df['title'] = df['content'].apply(lambda x: x.split('\\n')[0].replace('\\t',''))\n",
     "    \n",
     "    df = df[['title','content','written_date','area']]\n",
@@ -74,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,118 +99,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('dataset/training_{}.pkl'.format(cur_time),'wb') as f:\n",
+    "with open('dataset/training_set.pkl'.format(cur_time),'wb') as f:\n",
     "    pickle.dump(total_df, f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = pd.read_pickle('dataset/training_{}.pkl'.format(cur_time))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>area</th>\n",
-       "      <th>content</th>\n",
-       "      <th>title</th>\n",
-       "      <th>written_date</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>\\t정의당  정치권  댓글 조작 사건 정쟁화 말고 재발 방지에 집중해야 \\n\\n\\n...</td>\n",
-       "      <td>정의당  정치권  댓글 조작 사건 정쟁화 말고 재발 방지에 집중해야</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>\\t 단독   안철수 지지율 37 로 오른 5일간 대대적 네거티브 공격 \\n\\n 문...</td>\n",
-       "      <td>단독   안철수 지지율 37 로 오른 5일간 대대적 네거티브 공격</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>\\t민주당원 여론조작 놓고 여야 공방  개인 범죄  vs  배후 밝혀야 \\n\\n박범...</td>\n",
-       "      <td>민주당원 여론조작 놓고 여야 공방  개인 범죄  vs  배후 밝혀야</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>\\t 단독  에 추천된 변호사  드루킹 체포 두 달 전 동행 해명 일부 모순\\n\\n...</td>\n",
-       "      <td>단독  에 추천된 변호사  드루킹 체포 두 달 전 동행 해명 일부 모순</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>\\t평화당  민주당  보수정권 전유물로 여겨진 여론조작 자행 충격 \\n\\n\\n\\n ...</td>\n",
-       "      <td>평화당  민주당  보수정권 전유물로 여겨진 여론조작 자행 충격</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   area                                            content  \\\n",
-       "0     0  \\t정의당  정치권  댓글 조작 사건 정쟁화 말고 재발 방지에 집중해야 \\n\\n\\n...   \n",
-       "1     0  \\t 단독   안철수 지지율 37 로 오른 5일간 대대적 네거티브 공격 \\n\\n 문...   \n",
-       "2     0  \\t민주당원 여론조작 놓고 여야 공방  개인 범죄  vs  배후 밝혀야 \\n\\n박범...   \n",
-       "3     0  \\t 단독  에 추천된 변호사  드루킹 체포 두 달 전 동행 해명 일부 모순\\n\\n...   \n",
-       "4     0  \\t평화당  민주당  보수정권 전유물로 여겨진 여론조작 자행 충격 \\n\\n\\n\\n ...   \n",
-       "\n",
-       "                                      title written_date  \n",
-       "0    정의당  정치권  댓글 조작 사건 정쟁화 말고 재발 방지에 집중해야                \n",
-       "1     단독   안철수 지지율 37 로 오른 5일간 대대적 네거티브 공격                \n",
-       "2    민주당원 여론조작 놓고 여야 공방  개인 범죄  vs  배후 밝혀야                \n",
-       "3   단독  에 추천된 변호사  드루킹 체포 두 달 전 동행 해명 일부 모순               \n",
-       "4       평화당  민주당  보수정권 전유물로 여겨진 여론조작 자행 충격                "
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data.head()"
    ]
   },
   {
