--- a/online_learning_test.ipynb
+++ b/online_learning_test.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
        "4   단독  에 추천된 변호사  드루킹 체포 두 달 전 동행 해명 일부 모순  04-19-21-15-13  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,16 +133,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "A, B, a, b = train_test_split(data.content, data.area, test_size=0.5,random_state=2)"
+    "A, B, a, b = train_test_split(X_train, y_train, test_size=0.5,random_state=2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,9 +154,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 5min 23s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "model = clf.fit(X_train, y_train)"
@@ -164,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,21 +181,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[816,   3,  33,  25,   4,   4],\n",
-       "       [ 15, 733,  19,   9,  11,  30],\n",
-       "       [ 19,   6, 749,   7,  15,   4],\n",
-       "       [ 18,  12,   0, 815,  10,   8],\n",
-       "       [  1,   9,   6,   1, 847,   8],\n",
-       "       [  5,   6,   2,   6,  14, 778]], dtype=int64)"
+       "array([[914,   4,  25,  24,   3,   5],\n",
+       "       [ 18, 853,  30,  12,  10,  35],\n",
+       "       [ 45,  21, 851,  11,  24,   6],\n",
+       "       [ 17,  21,   1, 878,  15,  11],\n",
+       "       [  1,  47,   8,   2, 906,   7],\n",
+       "       [  4,  29,   1,   5,  17, 860]], dtype=int64)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -208,14 +216,14 @@
      "text": [
       "             precision    recall  f1-score   support\n",
       "\n",
-      "          0       0.93      0.92      0.93       885\n",
-      "          1       0.95      0.90      0.92       817\n",
-      "          2       0.93      0.94      0.93       800\n",
-      "          3       0.94      0.94      0.94       863\n",
-      "          4       0.94      0.97      0.96       872\n",
-      "          5       0.94      0.96      0.95       811\n",
+      "          0       0.91      0.94      0.93       975\n",
+      "          1       0.87      0.89      0.88       958\n",
+      "          2       0.93      0.89      0.91       958\n",
+      "          3       0.94      0.93      0.94       943\n",
+      "          4       0.93      0.93      0.93       971\n",
+      "          5       0.93      0.94      0.93       916\n",
       "\n",
-      "avg / total       0.94      0.94      0.94      5048\n",
+      "avg / total       0.92      0.92      0.92      5721\n",
       "\n"
      ]
     }
@@ -233,106 +241,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from datetime import datetime\n",
-    "\n",
-    "now = datetime.now()\n",
-    "cur_time = now.strftime('%Y-%m-%d %H-%M-%S')\n",
-    "\n",
-    "pickle.dump(model, open(\"dataset/1_twitter-tfidf-mulnb.pkl\", \"wb\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = pickle.load(open('dataset/1_twitter-tfidf-mulnb.pkl','rb'))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[257,   1,   8,   5,   1,   1],\n",
-       "       [  5, 251,   4,   1,   8,   8],\n",
-       "       [ 10,   5, 255,   1,  11,   0],\n",
-       "       [  5,   3,   0, 276,   6,   2],\n",
-       "       [  3,   4,   3,   0, 276,   4],\n",
-       "       [  3,   7,   0,   1,   9, 250]], dtype=int64)"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "y_pred = model.predict(X_test)\n",
-    "confusion_matrix(y_test, y_pred)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "             precision    recall  f1-score   support\n",
-      "\n",
-      "          0       0.91      0.94      0.92       273\n",
-      "          1       0.93      0.91      0.92       277\n",
-      "          2       0.94      0.90      0.92       282\n",
-      "          3       0.97      0.95      0.96       292\n",
-      "          4       0.89      0.95      0.92       290\n",
-      "          5       0.94      0.93      0.93       270\n",
-      "\n",
-      "avg / total       0.93      0.93      0.93      1684\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(classification_report(y_test, y_pred))"
+    "%%time\n"
    ]
   },
   {
