180422 Training, cross validation

--- a/news_search_selection.ipynb
+++ b/news_search_selection.ipynb
@@ -949,7 +949,7 @@
     }
    ],
    "source": [
-    "news_rank_recommend(1,'파이썬',10)"
+    "news_rank_recommend(user_id = 1,keyword = '파이썬',how_many = 10)"
    ]
   },
   {
@@ -976,7 +976,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
