--- a/seeding_mysql.ipynb
+++ b/seeding_mysql.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,33 +43,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_pickle('dataset/training_set.pkl')"
+    "data = pd.read_pickle('dataset/seed_preprocessed.pkl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -138,7 +138,7 @@
        "4   단독  에 추천된 변호사  드루킹 체포 두 달 전 동행 해명 일부 모순  2018-04-19 02:01:00  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
        "19067"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,12 +184,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0  completed !\n",
+      "1000  completed !\n",
+      "2000  completed !\n",
+      "3000  completed !\n",
+      "4000  completed !\n",
+      "5000  completed !\n",
+      "6000  completed !\n",
+      "7000  completed !\n",
+      "8000  completed !\n",
+      "9000  completed !\n",
+      "10000  completed !\n",
+      "11000  completed !\n",
+      "12000  completed !\n",
+      "13000  completed !\n",
+      "14000  completed !\n",
+      "15000  completed !\n",
+      "16000  completed !\n",
+      "17000  completed !\n",
+      "18000  completed !\n",
+      "19000  completed !\n"
+     ]
+    }
+   ],
    "source": [
     "# article to DB\n",
     "curs = db.cursor()\n",
+    "count = 0\n",
     "for idx, val in data.iterrows():\n",
     "    area = val['area']\n",
     "    title = \"'{}'\".format(val['title'])\n",
@@ -200,7 +228,17 @@
     "        area, title, content, date)\n",
     "\n",
     "    curs.execute(sql)\n",
-    "    db.commit()"
+    "    db.commit()\n",
+    "    if count%1000==0:\n",
+    "        print(count,' completed !')\n",
+    "    count += 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "--------------"
    ]
   },
   {
@@ -288,7 +326,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
